Added friends index/friend show page. Added search expert functionatliy to friend show page.

--- a/connect-scientist/app/assets/stylesheets/application.css
+++ b/connect-scientist/app/assets/stylesheets/application.css
@@ -45,3 +45,7 @@
   /* Center and scale the image nicely */
   background-size: cover;
 }
+.card-img-top {
+  max-height: 300px;
+  max-width: 150px;
+}
